# ElectionDataBot

./: .gitignore  .replit  Dockerfile  README.md  README_RENDER.md  RENDER_SETUP_GUIDE.md  SETUP_COMPLETE.md  SETUP_INSTRUCTIONS.md  TROUBLESHOOTING_EMPTY_DATA.md  credentials_example.json  dashboard.py  google_sheets_connector.py  main.py  pyproject.toml  render.yaml  replit.md  requirements.txt  run_bot.sh  run_with_dashboard.py  setup_check.py  start_bot.py  test_connection_and_data.py  test_result.html  test_website_structure.py  دليل_الاستخدام.md  دليل_النشر_السريع_Render.md  دليل_النشر_على_Render.md  كيفية_الاستخدام.md
attached_assets/: Pasted---1761778997056_1761778997057.txt  Pasted-60-0-dfsg-1-7-102-7-Setting-up-libhttp-daemon-perl-6-16-1-7-102-7-Setting-up-libegl1-am-1761777556622_1761777556623.txt
templates/: dashboard.html
