[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "gspread>=6.2.1",
    "oauth2client>=4.1.3",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "selenium>=4.38.0",
    "trafilatura>=2.0.0",
    "webdriver-manager>=4.0.2",
]
